# NTUST-Introduction-to-Computer-Graphics

./: .gitattributes  .gitignore
Project1/: CMakeLists.txt  Document.odt  README.md
Project1/Images/: apple.tga  half.tga  lion.tga  milk.tga  mountain.tga  tiger-rabbit.tga  undither.tga
Project1/src/: Filter.cpp  Filter.h  Main.cpp  Palette.cpp  Palette.h  TargaImage.cpp  TargaImage.h
Project1/上課教材/: NPR_Algorithm.txt  Project1-Grading.doc
Project1/上課教材/Sample Results/: filter-edge.tga  filter-enhance.tga
Project2/: CMakeLists.txt  Document.odt  README.md
Project2/include/glm/: README.txt
Project2/src/: BuildMaze.cpp  Cell.h  Frustum.cpp  Frustum.h  LineSeg.cpp  LineSeg.h  Maze.cpp  Maze.h  MazeWindow.cpp  MazeWindow.h  My_GLU.cpp  My_GLU.h  RunMaze.cpp
Project2/上課教材/: Project 2 Grading.doc
Project3-checkpoint1/: CMakeLists.txt  NOTE.md  README.md
Project3-checkpoint1/assets/shaders/: simple.frag  simple.vert  wave.frag  wave.vert
Project3-checkpoint1/doc/: Document.odt  Doxyfile  TODO.xlsx  index.chm
Project3-checkpoint1/src/: Box_VAO.h  CallBacks.H  CallBacks.cpp  ControlPoint.H  Draw.H  Draw.cpp  Enum.H  Enum.cpp  TextureCubeMap.cpp  TextureCubeMap.h  Track.H  Track.cpp  TrainView.H  TrainView.cpp  TrainWindow.H  TrainWindow.cpp  VAO_Interface.h  Wave_VAO.cpp  Wave_VAO.h
Project3-checkpoint1/src/Utilities/: ArcBallCam.H  ArcBallCam.cpp  Pnt3f.H
reversi/: CMakeLists.txt  README.md
reversi/doc/: Doxyfile  reversi.chm
reversi/include/glad/: gl.h
reversi/src/: ColorDisplay.cpp  ColorDisplay.h  Game.cpp  Game.h  GameView.cpp  GameView.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  gl.cpp  main.cpp
